--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,10 @@ dependencies:
   http: ^1.2.0
   flutter:
     sdk: flutter
-  uuid: ^3.0.7
+  uuid: ^4.5.2
+  cached_network_image: ^3.4.1
+  flutter_html: ^3.0.0-beta.2 
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
