--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  # Project assets
+  assets:
+    - RemindDbFull.png
+    - Remind_DB_logo.png
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
