hopefully fixed playlist button

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   sqflite: ^2.3.0
+  sqflite_common_ffi: ^2.3.0
   path: ^1.9.0
   http: ^1.2.0
   flutter:
