--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   uuid: ^4.5.2
   cached_network_image: ^3.4.1
   flutter_html: ^3.0.0-beta.2 
+  provider: ^6.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
